--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <p class="text-right font-weight-bold"><u>VERONICA VALERO</u></p>
         <p class="text-right">Applicant</p>
     </div>
-  <a href="index.html" class="btn btn-primary btn-lg">Exit</a>
+  <a href="https://nicaaa023.github.io/valero_finalProject/" class="btn btn-primary btn-lg">Exit</a>
 </body>
 </html>
 
